<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/secure_connect_scan"
        android:title="@string/secure_connect"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/insecure_connect_scan"
        android:title="@string/insecure_connect"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/discoverable"
        android:title="@string/bluetooth_discoverable"
        app:showAsAction="never" />

    <item
        android:id="@+id/persistent_storage"
        android:title="@string/persistent_storage"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bluetooth_log"
        android:title="@string/action_bluetooth_log"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_competitive_mode"
        android:title="@string/action_toggle_competitive_mode"
        app:showAsAction="never" />

    <!--<item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
</menu>
